--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>Introduction to Front-end Development Amir Osmanovic</h1>
+<p>New Paragraf</p>
 <p>A front-end developer architects and developer client part of website and application using web technologies(language):</p>
 <ul>
 <li style="color:red;">HTML</li>
